# electricity_exhange

./: .gitignore  Makefile.toml
esp32c3/: Cargo.toml  cfg.toml  generate_ssl.sh  rust-toolchain.toml
esp32c3/.cargo/: config.toml
esp32c3/certs/: ca_cert.pem  ca_cert.srl  ca_key.pem  certificate.pem  entsoe.eu.pem  private_key.pem
esp32c3/src/: client.rs  datetime.rs  display.rs  http.rs  lib.rs  local_clock.rs  main.rs  serial.rs  storage.rs  styles.rs  tasks.rs  wifi.rs
esp32c3/src/certs/: ca_cert.pem  cert.pem  key.pem
esp32c3/src/client/: parse.rs
host/: Cargo.toml  build.rs  log.txt
host/configs/: settings.toml
host/src/: action.rs  lib.rs  main.rs  model.rs  settings.rs  styles.rs  tracing.rs  ui_event.rs  ui_render.rs  update.rs
host/src/settings/: keybindings.rs
shared/: Cargo.toml
shared/src/: lib.rs
