[package]
name = "electricity_exhange"
edition = "2021"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }

esp-hal = { version = "0.18.0", features = ["esp32c3", "async"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
esp-backtrace = { version = "0.12.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32c3", "uart"] }
fugit = "0.3.7"
mipidsi = "0.8.0"
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-81920",
    "arch-riscv32",
] }
# embassy-executor = { version = "0.5.0", features = ["nightly", "arch-riscv32"] }


embedded-hal-async = "1.0.0"
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "time-timg0"] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
heapless = "0.8.0"
# embedded-graphics-framebuf = "0.5.0"
embassy-usb = "0.2.0"
embedded-io-async = "0.6.1"
embassy-sync = "0.6.0"
static_cell = "2.1.0"
embassy-time-driver = "0.1.0"
esp-wifi = { version = "0.6.0", features = [
    "embedded-svc",
    "esp32c3",
    "tcp",
    "wifi-default",
    "async",
    "embassy-net",
] }

reqwless = { version = "0.12.0", default-features = false, features = [
    "log",
    "embedded-tls",
] }

embassy-net = { version = "0.4.0", features = ["tcp", "dns", "dhcpv4"] }
embedded-tls = { version = "0.17.0", default-features = false }
embedded-nal-async = "0.7.1"
corncobs = "0.1.3"
display-interface = "0.5.0"
embedded-hal = "1.0.0"
u8g2-fonts = { version = "0.4.0" }
critical-section = "1.1.2"
sequential-storage = "2.0.2"
postcard = { version = "1.0.8", features = ["experimental-derive"] }
serde = { version = "1.0.204", default-features = false }
esp-storage = { version = "0.3.0", features = ["esp32c3", "nor-flash"] }
embedded-storage = "0.3.1"
embassy-embedded-hal = "0.1.0"
embedded-storage-async = "0.4.1"

# cargo build/run
[profile.dev]
opt-level = "s"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

[profile.dev.package.esp-wifi]
opt-level = 3


# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
