[package]
name = "electricity_exhange"
edition = "2021"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }

# Embassy
embassy-net = { version = "0.4.0", features = ["tcp", "dns", "dhcpv4"] }
embassy-embedded-hal = "0.2.0"
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-81920",
    "arch-riscv32",
] }
embassy-time = { version = "0.3.2", features = ["generic-queue-8"] }
embassy-sync = "0.6.0"

# Esp
esp-hal = { version = "0.20.1", features = ["esp32c3", "async"] }
esp-backtrace = { version = "0.14", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.11", default-features = false, features = [
    "esp32c3",
    "uart",
] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32c3"] }
esp-wifi = { version = "0.8.0", features = [
    "embedded-svc",
    "esp32c3",
    "tcp",
    "wifi-default",
    "async",
    "embassy-net",
] }
# esp-alloc = { version = "0.4.0" }

# Embedded
embedded-hal-bus = "0.2.0"
embedded-io-async = "0.6.1"
critical-section = "1.1.2"

# Display
mipidsi = "0.8.0"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
u8g2-fonts = { version = "0.4.0" }


# Embedded data structures
heapless = "0.8.0"
static_cell = "2.1.0"

# Http
# reqwless = { version = "0.12.0", default-features = false, features = [
#     "log",
#     "embedded-tls",
# ] }
reqwless = { git = "https://github.com/drogue-iot/reqwless", rev = "889c6e738f839cc894b61c45bbaab95899c58737", default-features = false, features = [
    "esp-mbedtls",
    "log",
] }
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", features = [
    "esp32c3",
    "async",
] }


# Serialization
serde = { version = "1.0.204", default-features = false }
serde-json-core = "0.6.0"
postcard = { version = "1.0.8", features = ["experimental-derive"] }
corncobs = "0.1.3"

# Storage
sequential-storage = "2.0.2"
esp-storage = { version = "0.3.0", features = ["esp32c3", "nor-flash"] }

# Time stuff
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
chrono-tz = { version = "0.9.0", default-features = false }
#Others
# quick-xml = { version = "0.36.1", default-features = false, features = ["serialize"] }
# cargo build/run
[profile.dev]
opt-level = "s"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

[profile.dev.package.esp-wifi]
opt-level = 3


# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
