[package]
name = "host"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vilhei/electricity_exhange"

[dependencies]
shared = { path = "../shared/" }

serialport = "4.4.0"
heapless = "0.8.0"
corncobs = "0.1.3"
ratatui = { version = "0.27.0", features = ["serde"] }
color-eyre = "0.6.3"
tui-logger = { version = "0.11.2", features = [
    "crossterm",
    "tracing",
    "tracing-subscriber",
    "tracing-support",
] }
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.5.0"
log = "0.4.22"
chrono = "0.4.38"
strum = { version = "0.26.3", features = ["derive"] }
tracing-appender = "0.2.3"
serde = { version = "1.0.204", features = ["derive"] }
config = "0.14.0"
# toml = "0.8.19"
# serde_with = "3.9.0"
# strum_macros = "0.26.4"

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

[dependencies.crossterm]
version = "*"
features = ["serde"]
