[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
chrono-tz = { version = "0.9.0", default-features = false }
corncobs = "0.1.3"
crc = "3.2.1"
embedded-graphics = "0.8.1"
heapless = { version = "0.8.0", features = ["serde"] }
mipidsi = "0.8.0"
postcard = { version = "1.0.8", default-features = false, features = [
    "crc",
    "heapless",
    "use-crc",
] }

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
strum = { version = "0.26.3", default-features = false }

strum_macros = "0.26.4"
